testdata/discovery/invalid-test-and-steps/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test
spec:
  steps:
  - name: create configmap
    spec:
      operations:
      - apply:
        - file: configmap.yaml
  - name: assert configmap
    spec:
      operations:
      - assert:
        - file: configmap.yaml
